Fix for overflow lists in Firefox

--- a/app/styles/theme/nanomessages.scss
+++ b/app/styles/theme/nanomessages.scss
@@ -14,6 +14,7 @@
   min-height: 100px;
   .conversation {
     display: flex;
+    min-height: 0;
     width: 100%;
     height: 100%;
     flex-direction: column;
