--- a/app/styles/theme/nw-card.scss
+++ b/app/styles/theme/nw-card.scss
@@ -14,6 +14,7 @@
       height: 232px;
       padding: 15px;
       display: flex;
+      min-height: 0;
       .nw-card-scroll {
         overflow-y: scroll;
       }
